--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
 blinker==1.9.0
 click==8.1.7
+exceptiongroup==1.2.2
 Flask==3.1.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+greenlet==3.2.1
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+packaging==25.0
+pluggy==1.5.0
 pygame==2.6.1
+pytest==8.3.5
+pytest-flask==1.3.0
+SQLAlchemy==2.0.40
+tomli==2.2.1
+typing_extensions==4.13.2
 Werkzeug==3.1.3
 WTForms==3.2.1
