--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==25.3.0
 blinker==1.9.0
 click==8.1.7
 exceptiongroup==1.2.2
@@ -6,15 +7,19 @@ Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.2.1
+hypothesis==6.131.23
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
 packaging==25.0
+pip-check==3.1
 pluggy==1.5.0
 pytest==8.3.5
 pytest-flask==1.3.0
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.40
+terminaltables==3.1.10
 tomli==2.2.1
 typing_extensions==4.13.2
 Werkzeug==3.1.3
