--- a/.github/workflows/presepy.yml
+++ b/.github/workflows/presepy.yml
@@ -2,10 +2,10 @@
 
 name: Pipeline CI/CD
 
-# on:
-#     push:
-#         branches:
-#             - main
+on:
+    push:
+        branches:
+            - main
 
 jobs:
     test:
