--- a/.github/workflows/presepy.yml
+++ b/.github/workflows/presepy.yml
@@ -1,49 +1,49 @@
-# Presepy GitHub Action
+# # Presepy GitHub Action
 
-name: Pipeline CI/CD
+# name: Pipeline CI/CD
 
-on:
-    push:
-        branches:
-            - main
+# on:
+#     push:
+#         branches:
+#             - main
 
-jobs:
-    test:
-        runs-on: ubuntu-latest
+# jobs:
+#     test:
+#         runs-on: ubuntu-latest
         
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
+#         steps:
+#             - name: Checkout code
+#               uses: actions/checkout@v2
 
-            - name: Set up Python
-              uses: actions/setup-python@v2
-              with:
-                  python-version: '3.13'
+#             - name: Set up Python
+#               uses: actions/setup-python@v2
+#               with:
+#                   python-version: '3.13'
 
-            - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install -r requirements.txt
+#             - name: Install dependencies
+#               run: |
+#                   python -m pip install --upgrade pip
+#                   pip install -r requirements.txt
 
-            - name: Run tests
-              run: |
-                  pytest tests/
+#             - name: Run tests
+#               run: |
+#                   pytest tests/
 
-    build_and_push:
-        needs: test
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
+#     build_and_push:
+#         needs: test
+#         runs-on: ubuntu-latest
+#         steps:
+#             - name: Checkout code
+#               uses: actions/checkout@v2
 
-            - name: Build Docker image
-              run: |
-                docker build -t ${{ secrets.DOCKER_USERNAME }}/presepy:latest .
-            - name: Log in to Docker Hub
-              uses: docker/login-action@v2
-              with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
-            - name: Push Docker image
-              run: |
-                docker push ${{ secrets.DOCKER_USERNAME }}/presepy:latest
+#             - name: Build Docker image
+#               run: |
+#                 docker build -t ${{ secrets.DOCKER_USERNAME }}/presepy:latest .
+#             - name: Log in to Docker Hub
+#               uses: docker/login-action@v2
+#               with:
+#                   username: ${{ secrets.DOCKER_USERNAME }}
+#                   password: ${{ secrets.DOCKER_PASSWORD }}
+#             - name: Push Docker image
+#               run: |
+#                 docker push ${{ secrets.DOCKER_USERNAME }}/presepy:latest
